src/bootstrap/test/v0_7/rejects/02_spawn_non_call/main.zg
# requires: v0.7

fn main() {
    let x := 5
    spawn x
}

main()
